# C-Programming-for-Beginners

./: .gitignore  COMPILATION_GUIDE.md  CONTRIBUTING.md  COURSE_SUMMARY.md  Doxyfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md
01-basics/: Makefile  README.md  basic_io.c  compilation_demo.c  hello_user.c  hello_world.c
02-variables-and-types/: Makefile  README.md  data_types.c  increment_decrement.c  operators.c  simple_int_printing.c  sizeof_demo.c  type_conversion.c
03-control-flow/: Makefile  README.md  conditionals.c  conditionals_buggy.c  loop_control.c  loops.c  loops_buggy.c  nested_loops.c  switch_buggy.c  switch_demo.c
04-functions/: Makefile  README.md  basic_functions.c  function_pointers.c  pass_by_value_reference.c  recursion_examples.c  scope_lifetime.c
05-arrays-and-strings/: Makefile  README.md  advanced_strings.c  array_algorithms.c  multidimensional_arrays.c  string_operations.c
06-pointers/: Makefile  README.md  pointer_arithmetic.c  pointer_basics.c  pointer_basics_buggy.c  pointer_to_pointer.c  pointers_arrays.c  pointers_functions.c
07-memory-management/: Makefile  README.md  dynamic_memory.c  memory_buggy.c  stack_vs_heap.c
08-structures-unions/: Makefile  README.md  advanced_structures.c  bitfields_and_unions.c  structures_demo.c  unions_demo.c
09-file-io/: Makefile  README.md  (+3 more)
20-professional-dev/example_project/: CMakeLists.txt  Makefile  README.md
20-professional-dev/example_project/include/: math_utils.h
20-professional-dev/example_project/src/: main.c
20-professional-dev/example_project/tests/: test_math.c
(+45 files in other folders)
